objects/Group_Outsourcing_Restriction__c.object
<CustomObject>
    <fields>
        <fullName>ASO_FI__c</fullName>
        <label>ASO/FI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Report__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Offshoring Restrictions</relationshipLabel>
        <relationshipName>Group_Outsourcing_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Add Additional Comments to support your request</inlineHelpText>
        <label>Additional Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Block Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Source of Request</inlineHelpText>
        <label>Client Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To be completed once  the Contract # is available.</inlineHelpText>
        <label>Contract #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Report__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date_of_Offshore_Restriction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date of Offshore Restriction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Outsourcing_Record_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The User who creates Group Offshoring Restriction Record</inlineHelpText>
        <label>Group Offshoring Record Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guideline_To_Select_Type_of_Restriction__c</fullName>
        <formula>HYPERLINK(&quot;/resource/Group_O_Restriction_Guideline_To_Select_Type_of_Restriction&quot;, &quot;Guidelines for Offshoring Restriction Categories&quot;)</formula>
        <label>Guideline To Select Type of Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Source of Request</inlineHelpText>
        <label>Internal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Restiction_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If this is an internal requested group restriction please provide explanation for restriction.</inlineHelpText>
        <label>Internal Restriction Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Submitter_Different_than_Record_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if someone else on behalf of the Record Owner is Submitting the approval request to the VP</inlineHelpText>
        <label>Is Submitter Different than Record Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoggedInUserId__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_members__c</fullName>
        <label>No. of members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NASCO</fullName>
                </value>
                <value>
                    <fullName>WGS 2.0</fullName>
                </value>
                <value>
                    <fullName>ACES</fullName>
                </value>
                <value>
                    <fullName>ALICS</fullName>
                </value>
                <value>
                    <fullName>AniTa</fullName>
                </value>
                <value>
                    <fullName>CHIPS</fullName>
                </value>
                <value>
                    <fullName>COMPASS</fullName>
                </value>
                <value>
                    <fullName>CS90</fullName>
                </value>
                <value>
                    <fullName>DeCare Dental</fullName>
                </value>
                <value>
                    <fullName>FACETS</fullName>
                </value>
                <value>
                    <fullName>WDS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_group_notice_approval_required__c</fullName>
        <inlineHelpText>Does group need prior approval/notification of any changes in groups restrictions.</inlineHelpText>
        <label>Prior group notice/approval required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Management_Approval_Report__c</fullName>
        <formula>Senior_Management_Approval__r.FirstName + &apos; &apos; + Senior_Management_Approval__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Senior Management Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Senior_Management_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select LOB Sales/Account Management VP as Approving Official.</inlineHelpText>
        <label>Senior Management Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Restrictions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Needs Revision</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group_Outsourcing_Restrictions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supported_by_Contractual_Language__c</fullName>
        <inlineHelpText>Reference the Contract # and page # of the contractual language. If NO is selected restriction will not be added until contractual language is provided.</inlineHelpText>
        <label>Supported by Contractual Language?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Type of Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Restriction__c</fullName>
        <label>Type of Restriction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Offshore Delivery - No Restrictions</fullName>
                </value>
                <value>
                    <fullName>Offshore Delivery – No ‘Live’ Member Touch</fullName>
                </value>
                <value>
                    <fullName>Offshore Delivery – Limited Offshore Restriction</fullName>
                </value>
                <value>
                    <fullName>Offshore Delivery – No PHI Processing</fullName>
                    <isActive>false</isActive>
                    <label>Offshore Delivery – No PHI Processing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_request__c</fullName>
        <label>Type of request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Group</fullName>
                </value>
                <value>
                    <fullName>Add Restriction</fullName>
                </value>
                <value>
                    <fullName>Remove Restriction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Group Offshoring Restriction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type_of_Account__c</columns>
        <columns>No_of_members__c</columns>
        <columns>Type_of_Restriction__c</columns>
        <columns>Senior_Management_Approval__c</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date_of_Offshore_Restriction__c</columns>
        <columns>Type_of_request__c</columns>
        <columns>ASO_FI__c</columns>
        <columns>Supported_by_Contractual_Language__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GOR-{0000}</displayFormat>
        <label>Group Offshoring Restriction Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Offshoring Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Change_for_appropriate_user</fullName>
        <active>false</active>
        <description>AND( $User.Id&lt;&gt; Senior_Management_Approval__r.Id,    NOT(Block_Validation_Rule__c)  )</description>
        <errorConditionFormula>IF(Block_Validation_Rule__c == False, True, False)</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
</CustomObject>